# prog_2sem

./: CMakeLists.txt  README.md  resource.h  resource.rc
include/: opcua_client.hpp
src/: graph_renderer.cpp  main.cpp  opcua_client.cpp  simple_opcua_gui.cpp
tests/: CMakeLists.txt
tests/integration/: test_gui_integration.cpp
tests/mocks/: mock_client.hpp
tests/unit/: test_opcua_client.cpp  test_scenarios.cpp  test_tag_data.cpp
